--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,9 @@
   publish = "dist"
   functions = "netlify/functions"
 
+[build.environment]
+  SECRETS_SCAN_OMIT_KEYS = "VITE_GROQ_API_KEY,GROQ_API_KEY"
+
 [dev]
   command = "npm run dev"
   port = 3000
@@ -15,5 +18,6 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Cross-Origin-Opener-Policy = "same-origin"
-    Cross-Origin-Embedder-Policy = "credentialless"
+    # Removed strict headers to allow Google Forms iframe
+    # Cross-Origin-Opener-Policy = "same-origin"
+    # Cross-Origin-Embedder-Policy = "credentialless"
